[package]
name = "filecase"
version = "0.1.4"
edition = "2021"
description = "A set of file management utilities based on the stateful crate"
license = "MIT"
repository= "https://github.com/limads/filecase"

[dependencies]
stateful = "0.1"
gtk4 = "0.4.8"
serde = { version="1.0", features=["derive"] }
sourceview5 = { version = "0.4.2" }
serde_json = "1.0.68"
