[package]
name = "filecase"
version = "0.1.5"
edition = "2021"
description = "A set of file management utilities based on the stateful crate"
license = "MIT"
repository= "https://github.com/limads/filecase"

[dependencies]
stateful = { git = "https://github.com/limads/stateful.git" }
gtk4 = "0.5.1"
serde = { version="1.0", features=["derive"] }
sourceview5 = { version = "0.5.0" }
serde_json = "1.0.68"
